fixed the issue which was: the image was hiding behind the navbar and i tried to give margin-top  to the image, which was wrong approach. Correct approach was to give main padding-top because now page will start after the given padding. Now image is not hidden anymore.

--- a/style.scss
+++ b/style.scss
@@ -9,10 +9,18 @@ html,body{
     height: 100%;
 }
 
+section,header{
+    max-width: 2000px;
+}
+
 main{
+    padding-top:8rem;
     header{
         width:100%;
         position:fixed;
+        top:0;
+        left:0;
+        z-index: 1000;
         .head{
             width:100%;
             padding:1rem;
@@ -51,15 +59,16 @@ main{
                     text-align: center;
                     h1{
                         font-size: 3.3rem;
-                        font-weight: 700;
+                        font-weight: 600;
                         line-height: 3.5rem;
                     }
                     
                 }
                 .media{
-                    margin-top: 8.5rem; 
+                    // margin-top: 8.5rem; 
                     img{
                         width:100%;
+
                     }
                 }   
             }
@@ -71,6 +80,46 @@ main{
                 padding:4rem 1.5rem;
                 line-height: 2.7rem;
                 padding-bottom: 8rem;
+            }
+        }
+    }
+}
+
+@media (min-width:1024px){
+    main{
+        header{
+            width:100%;
+            .nav{
+                padding: 2rem 4rem;
+            }
+        }
+
+        .hero{
+            .container{
+                .mantle{
+                    display: flex;
+                    flex-direction: row-reverse;
+                    justify-content: center;
+                    align-items: center;
+                    width:100%;
+                    padding:15rem;
+                    .media{
+                        width:50%;
+                        img{
+                            width:100%;
+
+                        }
+                    }
+                    .text{
+                        width:50%;
+                        h1{
+                            font-size: 6rem;
+                            line-height: 5.5rem;
+                            font-weight: 600;
+                            text-align: left;
+                        }
+                    }
+                }
             }
         }
     }
